Final touches to deploy.

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_USER=flat1ander
 DB_PW=OGKpwmuHd4R1
-DB_HOST='ep-orange-bonus-982074.us-east-2.aws.neon.tech'
+DB_HOST=ep-orange-bonus-982074.us-east-2.aws.neon.tech
+SECRET_KEY=fsdlkjfslkj
+DATABASE_URL=postgres://flat1ander:OGKpwmuHd4R1@ep-orange-bonus-982074.us-east-2.aws.neon.tech/movie_tracker
